--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                         <li><a class="dropdown-item" href="#3d">3D models</a></li>
                     </ul>
                     </li>
+                                        <li class="nav-item dropdown navbar-spacing">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Game Projects
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#initald">Inital D: Game Stage</a></li>
+                        <li><a class="dropdown-item" href="#ssr">Split/Second: Reborn</a></li>
+                    </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -87,7 +96,7 @@
             <h4 class="center main-text-mini">ABOUT ME</h4>
             <hr class="hr-white">
             <br><br>
-            <p>My name is Tóth Dániel (V2na). I do programming, 3D stuff, and music. Also im a big car fan! Especially 90s cars.</p>
+            <p>My name is Dániel Tóth (V2na). I do programming, 3D stuff, and music. Also im a big car fan! Especially 90s cars.</p>
             <p>I own 2 YouTube channels. I mostly post on the <a href="https://www.youtube.com/channel/UCUO3NajHE3ojOqiN_zdNaKQ" target="_blank">main channel</a> where I upload game development releated stuff.<br>I upload my music onto the <a href="https://www.youtube.com/channel/UCfmeTGVOftI6BNqaVoP_izA" target="_blank">second channel</a>. I don't really have one style, but mostly I make 90s Underground House & 80s Funk.</p> 
         </section>
         <br><br>
@@ -97,17 +106,26 @@
             <h4 class="center main-text-mini">CONTACTS</h4>
             <hr class="hr-white">
             <br><br>
-            <div class="about-buttons">
-                <div class="row">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=v2na.dkid@gmail.com" target="_blank"><button class="btn btn-dark">E-MAIL</button></a>
+                <a href="https://discord.gg/2FHBw2MfXR" target="_blank"><button class="btn btn-dark">DISCORD</button></a>
+            <br><br>
+        </section>
+
+        <section id="initald">
+            <br>
+            <hr class="hr-white">
+            <h4 class="center main-text-mini">INITAL D: GAME STAGE</h4>
+            <hr class="hr-white">
+            <br><br>
+            <div class="row">
                     <div class="col-md-6">
-                        <a href="https://discord.gg/BABR8JK9eM" target="_blank" style="text-decoration:none">
-                            <img class="card-img-top img-icon image-fluid" src="img/icon/discord.png">
-                            <div class="card-body">
-                                <h5 class="card-title">Split/Second: Reborn <br>Discord Server</h5>
-                            </div>
-                        </a>
+                        <iframe width="700" height="400" src="https://www.youtube.com/embed/heFrqLVnYPM" title="Initial D: Game Stage (wip) - Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <br><br><br>
                     </div>
                     <div class="col-md-6">
+                        <p class="text-left"><strong>Initial D: Game Stage </strong> is a racing video game currently in development. The game is based on <br>the anime series Initial D. It will be free to download on PC, with an Android version coming later.</p>
+                        <p class="text-left">There will be no multiplayer support. Only the single-player campaign, quick play, and custom races will be available.</p>
+                        <br><br><br>
                         <a href="https://discord.gg/2FHBw2MfXR" target="_blank" style="text-decoration:none">
                             <img class="card-img-top img-icon image-fluid" src="img/icon/discord.png">
                             <div class="card-body">
@@ -116,12 +134,34 @@
                         </a>
                    </div>
                 </div>
-            </div>
+        </section>
+        <section id="ssr">
+            <br>
+            <hr class="hr-white">
+            <h4 class="center main-text-mini">SPLIT/SECOND: REBORN</h4>
+            <hr class="hr-white">
             <br><br>
+            <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="700" height="400" src="https://www.youtube.com/embed/N0qAY07odu8" title="Split/Second remake - Survival (wip)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <br><br><br>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="text-left">In 2010, Disney Interactive Studios released the arcade racing game Split/Second: Velocity. <br> Not long after its release, the developer, Black Rock Studio, went bankrupt, and the game never received a sequel.</p>
+                        <p class="text-left"><strong>Split/Second: Reborn</strong> is a recreation of the original game, built in Unreal Engine 5.</p>
+                        <br><br><br>
+                        <a href="https://discord.gg/BABR8JK9eM" target="_blank" style="text-decoration:none">
+                            <img class="card-img-top img-icon image-fluid" src="img/icon/discord.png">
+                            <div class="card-body">
+                                <h5 class="card-title">Split/Second: Reborn <br>Discord Server</h5>
+                            </div>
+                        </a>
+                    </div>
+                </div>
         </section>
         <hr class="br-custom-size-3">
         <hr class="hr-white">
-        <p>Website Created and Designed by V2na - © 2025-2025</p>
+        <p>Website Created and Designed by V2na - © 2025</p>
     </div>
     <button class="btn btn-dark" onclick="topFunction()" id="TopBtn" title="Go to top">TOP</button>
     <script>
