--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <section id="initald">
             <br>
             <hr class="hr-white">
-            <h4 class="center main-text-mini">INITAL D: GAME STAGE</h4>
+            <h4 class="center main-text-mini">INITIAL D: GAME STAGE</h4>
             <hr class="hr-white">
             <br><br>
             <div class="row">
