--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Game Projects
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#initald">Inital D: Game Stage</a></li>
+                        <li><a class="dropdown-item" href="#initald">Initial D: Game Stage</a></li>
                         <li><a class="dropdown-item" href="#ssr">Split/Second: Reborn</a></li>
                     </ul>
                     </li>
