--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Game Projects
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#initald">Initial D: Game Stage</a></li>
+                        <li><a class="dropdown-item" href="#initiald">Initial D: Game Stage</a></li>
                         <li><a class="dropdown-item" href="#ssr">Split/Second: Reborn</a></li>
                     </ul>
                     </li>
@@ -111,7 +111,7 @@
             <br><br>
         </section>
 
-        <section id="initald">
+        <section id="initiald">
             <br>
             <hr class="hr-white">
             <h4 class="center main-text-mini">INITIAL D: GAME STAGE</h4>
