--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav center">
                     <li class="nav-item navbar-spacing">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#contacts">Hire Me</a>
                     </li>
                     <li class="nav-item navbar-spacing">
                     <a class="nav-link" href="#about">About me</a>
-                    </li>
-                    <li class="nav-item navbar-spacing">
-                    <a class="nav-link" href="#contacts">Contacts</a>
                     </li>
                     <li class="nav-item dropdown navbar-spacing">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,17 +93,18 @@
             <h4 class="center main-text-mini">ABOUT ME</h4>
             <hr class="hr-white">
             <br><br>
-            <p>My name is Dániel Tóth (V2na). I do programming, 3D stuff, and music. Also im a big car fan! Especially 90s cars.</p>
+            <p>My name is Dániel Tóth (V2na). I am a programmer, 3D artist, and music artist.</p>
             <p>I own 2 YouTube channels. I mostly post on the <a href="https://www.youtube.com/channel/UCUO3NajHE3ojOqiN_zdNaKQ" target="_blank">main channel</a> where I upload game development releated stuff.<br>I upload my music onto the <a href="https://www.youtube.com/channel/UCfmeTGVOftI6BNqaVoP_izA" target="_blank">second channel</a>. I don't really have one style, but mostly I make 90s Underground House & 80s Funk.</p> 
         </section>
         <br><br>
         <section id="contacts">
             <br>
             <hr class="hr-white">
-            <h4 class="center main-text-mini">CONTACTS</h4>
+            <h4 class="center main-text-mini">HIRE ME</h4>
             <hr class="hr-white">
             <br><br>
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=v2na.dkid@gmail.com" target="_blank"><button class="btn btn-dark">E-MAIL</button></a>
+                <br><br>
                 <a href="https://discord.gg/2FHBw2MfXR" target="_blank"><button class="btn btn-dark">DISCORD</button></a>
             <br><br>
         </section>
