--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
                     </div>
                 </div>
                 <div class="col-sm-6 card-render">
+                    <img src="img/mesh previews/dx7.png" class="card-img-top render-prev">
+                    <br><br>
+                    <div class="card-body">
+                    <h5 class="card-title">1983 Yamaha DX7 Digital Synthesizer</h5><br>
+                    <p class="card-text">The Yamaha DC7 offers precise playback, recording, and integration with smart systems, making it ideal for both professional musicians and educational environments.</p><br>
+                    </div>
+                    <div class="card-footer">
+                        <hr>
+                        <a href="https://sketchfab.com/3d-models/1983-yamaha-dx7-digital-synthesizer-0981427e56394de4ab4287f64921f4c5" target="_blank"><button class="btn btn-dark">PREVIEW & DOWNLOAD</button></a>
+                    </div>
+                </div>
+                <div class="col-sm-6 card-render">
                     <img src="img/mesh previews/jvc.png" class="card-img-top render-prev">
                     <br><br>
                     <div class="card-body">
