--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
                         <a href="https://sketchfab.com/3d-models/jvc-rx-1000v-vintage-receiver-17229bb6febd4392a488563d7264553f" target="_blank"><button class="btn btn-dark">PREVIEW & DOWNLOAD</button></a>
                     </div>
                 </div>
+                                <div class="col-sm-6 card-render">
+                    <img src="img/mesh previews/boston.png" class="card-img-top render-prev">
+                    <br><br>
+                    <div class="card-body">
+                    <h5 class="card-title">1993 Schneider Boston - Retro HiFi system</h5><br>
+                    <p class="card-text">The first HiFi system with a GUI (Graphical User Interface).</p><br>
+                    </div>
+                        <div class="card-footer">
+                        <hr>
+                        <a href="https://sketchfab.com/3d-models/1993-schneider-boston-retro-hifi-system-991c3e600edd466db51310e2b8263ebb" target="_blank"><button class="btn btn-dark">PREVIEW & DOWNLOAD</button></a>
+                    </div>
+                </div>
             </div>
         </section>
 
